--- a/Presentacion/Presentacion.csproj
+++ b/Presentacion/Presentacion.csproj
@@ -87,6 +87,9 @@
     <EmbeddedResource Include="MDoctor.resx">
       <DependentUpon>MDoctor.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MEspecialidad.resx">
+      <DependentUpon>MEspecialidad.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
