--- a/Presentacion/Presentacion.csproj
+++ b/Presentacion/Presentacion.csproj
@@ -53,11 +53,11 @@
     <Compile Include="FrmAdministrador.Designer.cs">
       <DependentUpon>FrmAdministrador.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmDiagnosticosMasComunes.cs">
+    <Compile Include="RDiagnosticosMasComunes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmDiagnosticosMasComunes.Designer.cs">
-      <DependentUpon>FrmDiagnosticosMasComunes.cs</DependentUpon>
+    <Compile Include="RDiagnosticosMasComunes.Designer.cs">
+      <DependentUpon>RDiagnosticosMasComunes.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmDoctor.cs">
       <SubType>Form</SubType>
@@ -77,11 +77,11 @@
     <Compile Include="FrmPacientes.Designer.cs">
       <DependentUpon>FrmPacientes.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmReporteTratamientos.cs">
+    <Compile Include="RTratamientos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmReporteTratamientos.Designer.cs">
-      <DependentUpon>FrmReporteTratamientos.cs</DependentUpon>
+    <Compile Include="RTratamientos.Designer.cs">
+      <DependentUpon>RTratamientos.cs</DependentUpon>
     </Compile>
     <Compile Include="MCita.cs">
       <SubType>Form</SubType>
