--- a/Presentacion/Presentacion.csproj
+++ b/Presentacion/Presentacion.csproj
@@ -95,6 +95,12 @@
     <Compile Include="RQuejasaDoctores.Designer.cs">
       <DependentUpon>RQuejasaDoctores.cs</DependentUpon>
     </Compile>
+    <Compile Include="RQuejasContenido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RQuejasContenido.Designer.cs">
+      <DependentUpon>RQuejasContenido.cs</DependentUpon>
+    </Compile>
     <Compile Include="RTratamientos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -195,6 +201,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RMedicosMasActivos.resx">
       <DependentUpon>RMedicosMasActivos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RQuejasaDoctores.resx">
+      <DependentUpon>RQuejasaDoctores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RQuejasContenido.resx">
+      <DependentUpon>RQuejasContenido.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
